change back mailto

--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
       <div class="divStyle">
          <h1>Contact</h1>
          <center>
-            <form action="process-html.php" method="post" >
-               Name:<br>
-               <input id="written" type="text" name="name" placeholder=" Name"><br>
+            <form action="MAILTO:mattyamcollege@gmail.com" method="post" enctype="text/plain">
+               First Name:<br>
+               <input id="written" type="text" name="First Name" placeholder=" First"><br>
+               Last Name:<br>
+               <input id="written" type="text" name="Last Name" placeholder=" Last"><br>
                E-mail:<br>
-               <input id="written" type="text" name="email" placeholder=" Your E-mail"><br>
+               <input id="written" type="text" name="E-mail" placeholder=" Your E-mail"><br>
                Comments:
                <textarea id="write" name="Comments" placeholder=" Write something here..."></textarea>
                <input id="button" type="submit" value="Send">
