Improve mobile navigation

--- a/about.html
+++ b/about.html
@@ -29,12 +29,12 @@
 
   <section class="section">
     <div class="row align-items-center g-4">
-      <div class="col-md-6">
-        <img src="https://i.imgur.com/kWzEs02.jpg" class="img-fluid rounded" alt="Matthew Yamamoto">
+      <div class="col-md-6 order-md-2">
+        <img src="https://i.imgur.com/rQoEtC6.jpg" class="img-fluid rounded" alt="About Matthew">
       </div>
       <div class="col-md-6">
-        <h1>Home</h1>
-        <p>This website is for Matthew Yamamoto and it is a portfolio about the skills and achievements that I have. This is one of my first projects that I have made using HTML, CSS and JavaScript and there are plenty more to come as I will be updating the portfolio with links to new projects that I will have in the future. If you would like to get in contact with me, please click the Contact Me button in the menu up top. Thank you for checking out my site!</p>
+        <h1>About Me</h1>
+        <p>I am a 2nd year Computer Science Major at California State University Dominguez Hills. I have been studying Java and Object Oriented programming for 2 years and I have just recently started working with HTML, CSS, and JavaScript. I am also mentoring my high school robotics team by helping with programming (in Java) and wherever else they need help with. In my free time I create small projects with my Arduino and CAD/3D print whatever comes to my mind such as a drink coaster or a battle bot design.</p>
       </div>
     </div>
   </section>
