--- a/contact.html
+++ b/contact.html
@@ -28,15 +28,19 @@
   </nav>
 
   <section class="section">
-    <div class="row align-items-center g-4">
-      <div class="col-md-6">
-        <img src="https://i.imgur.com/kWzEs02.jpg" class="img-fluid rounded" alt="Matthew Yamamoto">
-      </div>
-      <div class="col-md-6">
-        <h1>Home</h1>
-        <p>This website is for Matthew Yamamoto and it is a portfolio about the skills and achievements that I have. This is one of my first projects that I have made using HTML, CSS and JavaScript and there are plenty more to come as I will be updating the portfolio with links to new projects that I will have in the future. If you would like to get in contact with me, please click the Contact Me button in the menu up top. Thank you for checking out my site!</p>
-      </div>
-    </div>
+    <h1>Contact</h1>
+    <form action="MAILTO:mattyamcollege@gmail.com" method="post" enctype="text/plain">
+      <label>First Name:</label>
+      <input id="written" type="text" name="First Name" placeholder=" First">
+      <label>Last Name:</label>
+      <input id="written" type="text" name="Last Name" placeholder=" Last">
+      <label>E-mail:</label>
+      <input id="written" type="text" name="E-mail" placeholder=" Your E-mail">
+      <label>Comments:</label>
+      <textarea id="write" name="Comments" placeholder=" Write something here..."></textarea>
+      <input id="button" type="submit" value="Send">
+      <input id="button" type="reset" value="Reset">
+    </form>
   </section>
 
   <footer class="footer">
