--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,23 @@
   </nav>
 
   <section class="section">
-    <div class="row align-items-center g-4">
+    <h1>Portfolio</h1>
+    <div class="row g-4">
       <div class="col-md-6">
-        <img src="https://i.imgur.com/kWzEs02.jpg" class="img-fluid rounded" alt="Matthew Yamamoto">
+        <div class="card h-100">
+          <a href="http://torbots.com"><img src="https://i.imgur.com/0OzeJnJ.jpg" class="card-img-top" alt="TorBots"></a>
+          <div class="card-body">
+            <h5 class="card-title">Mentor for TorBots (FIRST Robotics Team)</h5>
+          </div>
+        </div>
       </div>
       <div class="col-md-6">
-        <h1>Home</h1>
-        <p>This website is for Matthew Yamamoto and it is a portfolio about the skills and achievements that I have. This is one of my first projects that I have made using HTML, CSS and JavaScript and there are plenty more to come as I will be updating the portfolio with links to new projects that I will have in the future. If you would like to get in contact with me, please click the Contact Me button in the menu up top. Thank you for checking out my site!</p>
+        <div class="card h-100">
+          <a href="https://www.freecodecamp.com"><img src="https://lh3.googleusercontent.com/dniwX6xiqmYlI7b48FAJWLknel7f3hz3nJm5Ja81S2146j9T7j7x6Bd-Ae-swwtR1To-UGQ=s630-fcrop64=1,615b0000f898ffff" class="card-img-top" alt="freeCodeCamp"></a>
+          <div class="card-body">
+            <h5 class="card-title">Earning Front End Dev. Certification From FCC</h5>
+          </div>
+        </div>
       </div>
     </div>
   </section>
